# eduparent-app-aws-ai-hackathon-hk

./: .gitignore  .samignore  README.md  lambda_handler.py  pyproject.toml  requirements.txt  samconfig.toml  template-example.yaml  template.yaml
.aws-sam/: build.toml
.kiro/specs/parenting-app-features/: design.md  requirements.md  tasks.md
apps/backend/: .env.example  .gitignore  lambda_handler.py  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: calculator.py  card_stack.py  roleplay.py
apps/backend/app/db/: database.py
apps/backend/app/models/: user.py  user_schemas.py
apps/backend/app/roleplay/agents/: __init__.py
apps/backend/app/roleplay/scenarios/: loader.py
apps/backend/app/roleplay/scenarios/data/: messy_room.yaml  school_dropoff_anxiety.yaml
apps/backend/app/roleplay/services/: game_engine.py
apps/backend/app/services/: auth_service.py  card_stack_service.py  feed_service.py
apps/frontend/: README_ENVIRONMENT_CONFIG.md  pubspec.yaml
apps/frontend/assets/translations/: en.json  zh-HK.json
apps/frontend/ios/Runner.xcodeproj/: project.pbxproj
apps/frontend/lib/: main.dart
apps/frontend/lib/config/: app_config.dart
apps/frontend/lib/models/: user.dart
apps/frontend/lib/screens/: login_screen.dart  register_screen.dart
apps/frontend/lib/services/: auth_service.dart
apps/frontend/macos/Runner.xcodeproj/: project.pbxproj
infra/: .env.example  docker-compose.yml
scripts/: setup.sh
