[project]
name = "eduparent-lambda"
version = "0.1.0"
description = "EduParent Lambda Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "mangum==0.17.0",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    "pyjwt==2.8.0",
    "passlib==1.7.4",
    "bcrypt==4.1.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"